<resources>
    <string name="app_name">Shop</string>

    <string name="cart_label">Cart</string>
    <string name="registration_label">Create account</string>
    <string name="authorization_label">Login in account</string>
    <string name="products_label">Products</string>
    <string name="users_label">Users</string>

    <string name="login_field_hint">Input login</string>
    <string name="email_field_hint">Input email</string>
    <string name="phone_field_hint">Input phone number</string>
    <string name="password_field_hint">Input password</string>

    <string name="registration_button">Create</string>
    <string name="authorization_button">Login</string>
    <string name="delete_button">Delete user</string>
    <string name="item_button">Check</string>
    <string name="buy_button">Buy</string>

    <string name="authorization_link">Go to authorization</string>
    <string name="registration_link">Go to registration</string>
    <string name="users_link">Go to users</string>
    <string name="products_link">Go to products</string>

    <string name="image_desc">Image description</string>
    <string name="price">Price: %1$s$</string>
    <string name="count">Count: %1$s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cart_link">Go to cart</string>
</resources>