<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:background="#201E28">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/registration_label" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#6a6a6a"
        android:textColor="#fdfdfd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/login_field_hint" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:textColor="#fdfdfd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/email_field_hint" />

    <EditText
        android:autofillHints="phone"
        android:id="@+id/user_phone_number"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="phone"
        android:textColorHint="#6a6a6a"
        android:textColor="#fdfdfd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/phone_field_hint" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/user_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:textColor="#fdfdfd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/password_field_hint" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textColor="#5e4602"
        android:backgroundTint="#e2a600"
        android:text="@string/registration_button"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/authorization_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_thin"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:textSize="17sp"
        android:text="@string/authorization_link" />

</LinearLayout>