<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="#26242E">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i1" />

    <TextView
        android:id="@+id/price"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="10dp"
        android:text=""
        android:textColor="#fdfdfd"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        android:text=""
        android:textColor="#fdfdfd"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="10dp"
        android:text="@string/plus"
        android:textColor="#5e4602"
        android:backgroundTint="#e2a600"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/count"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="10dp"
        android:text="@string/minus"
        android:textColor="#5e4602"
        android:backgroundTint="#e2a600"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/count"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>